<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EvolutionPokemonsWindow">

    <TextView
        android:id="@+id/title_type5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/progressBarFive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarFour" />

    <TextView
        android:id="@+id/title_type4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/spd"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/progressBarFour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarthree" />

    <TextView
        android:id="@+id/title_type3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/def"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/progressBarthree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarTwo" />

    <TextView
        android:id="@+id/title_type2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/atk"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/progressBarTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarOne" />

    <TextView
        android:id="@+id/title_tv_evolution_namePokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center|start"
        android:text="@string/charizard"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/title_poder_um"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_pokemon_poder"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/poder"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/title_poder_dois"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tv_evolution_namePokemon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title_poder_dois"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_pokemon_poder_segunda"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/power"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/title_poder_um"
        app:layout_constraintTop_toBottomOf="@+id/title_tv_evolution_namePokemon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weight"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_kg"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/title_height"
        android:layout_width="46dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/height"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toEndOf="@+id/title_weight"
        app:layout_constraintTop_toBottomOf="@+id/title_power"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/title_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/_1_7m"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="@+id/title_poder_dois"
        app:layout_constraintTop_toBottomOf="@+id/title_poder_dois" />

    <TextView
        android:id="@+id/title_status_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_stats"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tv_evolution_namePokemon"
        app:layout_constraintVertical_bias="0.402" />

    <TextView
        android:id="@+id/title_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/_90_5_kg"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/title_poder_um"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_poder_um" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="403dp"
        android:layout_height="295dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/rounded_bg_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_pokemon"
        android:layout_width="192dp"
        android:layout_height="230dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953"
        app:srcCompat="@drawable/charizard" />

    <TextView
        android:id="@+id/title_tv_evolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center|start"
        android:text="@string/pokedex"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/title_tv_evolution_number"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toEndOf="@+id/tv_evolution"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_tv_evolution_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:text="@string/_006"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toEndOf="@+id/img_pokemon"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.114" />

    <ImageView
        android:id="@+id/tv_evolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toTopOf="@+id/img_pokemon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:srcCompat="@drawable/arrow_left"
        app:tint="@color/white" />

    <ProgressBar
        android:id="@+id/progressBarOne"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:background="@drawable/bg_barra_profile"
        app:layout_constraintBottom_toTopOf="@+id/progressBarTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_status_pokemon"
        app:layout_constraintVertical_bias="0.5" />

    <ProgressBar
        android:id="@+id/progressBarthree"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:background="@drawable/bg_barra_profile"
        app:layout_constraintBottom_toTopOf="@+id/progressBarFour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarTwo"
        app:layout_constraintVertical_bias="0.5" />

    <ProgressBar
        android:id="@+id/progressBarTwo"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:background="@drawable/bg_barra_profile"
        app:layout_constraintBottom_toTopOf="@+id/progressBarthree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarOne"
        app:layout_constraintVertical_bias="0.5" />

    <ProgressBar
        android:id="@+id/progressBarFive"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:background="@drawable/bg_barra_profile"        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarFour"
        app:layout_constraintVertical_bias="0.5" />

    <ProgressBar
        android:id="@+id/progressBarFour"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:background="@drawable/bg_barra_profile"
        app:layout_constraintBottom_toTopOf="@+id/progressBarFive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarthree"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/title_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/progressBarOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_status_pokemon" />

</androidx.constraintlayout.widget.ConstraintLayout>